Bug 60381 - The operation on <path> was started with an invalid parameter
Summary: The operation on <path> was started with an invalid parameter
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.6.5.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Giuseppe Castagno (aka beppec56)
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-06 18:41 UTC by Cristian
Modified: 2021-04-28 14:40 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian 2013-02-06 18:41:09 UTC
When opening a document or spreadsheet stored in some Sharepoint 2010 libraries trough WebDAV, the error "The operation on \\server_fqdn@SSL\DavWWWRoot\sitename\library_name was started with an invalid parameteris" is raised.
Only the documents with read-only access seem to be affected, if access is read-write the files open without issues. 
The error apears on all *-office I've tested: LO 3.6.5 and 4 RC3, OOo 3.4.1 and IBM Symphony 3.0.1 .
Reaserching the web, this error apears when an incorrect filter is selected.
It also apears with path names that use special characters, I've checked that and this is not the case.
Comment 1 Joel Madero 2014-05-28 02:12:19 UTC
Hey Cristian,

So sorry for the long delay between your post and our team getting in touch. It's a bit hard to find someone with a similar setup to test. I want to verify that you still see this problem with 4.2.4.2 release and I'll do my best to find someone to confirm. Thanks!
Comment 2 Cristian 2014-05-28 04:42:13 UTC
Hi,
I don't have access to the initial setup to test the new version.
You may close the issue if you want.
Best Regards


On Wed, May 28, 2014 at 5:12 AM, <bugzilla-daemon@freedesktop.org> wrote:

>  Joel Madero <jmadero.dev@gmail.com> changed bug 60381<https://bugs.freedesktop.org/show_bug.cgi?id=60381>
>  What Removed Added  CC   jmadero.dev@gmail.com
>
>  *Comment # 1 <https://bugs.freedesktop.org/show_bug.cgi?id=60381#c1> on
> bug 60381 <https://bugs.freedesktop.org/show_bug.cgi?id=60381> from Joel
> Madero <jmadero.dev@gmail.com> *
>
> Hey Cristian,
>
> So sorry for the long delay between your post and our team getting in touch.
> It's a bit hard to find someone with a similar setup to test. I want to verify
> that you still see this problem with 4.2.4.2 release and I'll do my best to
> find someone to confirm. Thanks!
>
>  ------------------------------
> You are receiving this mail because:
>
>    - You reported the bug.
>
>
Comment 3 Camille 2014-05-28 13:43:30 UTC
Hi,

I have the same problem with the new release 4.2.4.2.

Are there any logs or configurations that I can give you to help investigate this bug ?

(In reply to comment #1)
> Hey Cristian,
> 
> So sorry for the long delay between your post and our team getting in touch.
> It's a bit hard to find someone with a similar setup to test. I want to
> verify that you still see this problem with 4.2.4.2 release and I'll do my
> best to find someone to confirm. Thanks!
Comment 4 Brian Coverstone 2014-09-09 17:24:27 UTC
This issue also happens in 4.3.1.2.  It works from MSWord, but throws the invalid parameter from OpenOffice and LibreOffice.

The issue occurs when authentication is set to Integrated or "Windows Authentication".  If you change it to "Basic Authentication", it will work properly.

I'm guessing authentication and LibreOffice are not good friends.
Comment 5 Joel Madero 2014-09-09 17:40:41 UTC
Version is oldest version not newest version. We just use comments to update
Comment 6 tommy27 2015-01-18 10:54:29 UTC
I set status to NEW becuase of independent confirmations in comment 3 and comment 4.

has anyone of those user tried latest 4.3.5.2?
is the bug still present?
Comment 7 ToanNH 2015-02-16 04:56:02 UTC
It still happened on Libre Office 4.4 ;(
Comment 8 Joel Madero 2015-02-16 06:22:57 UTC
In the future please don't change the version - it's the oldest version that the bug is confirmed on. Not the latest. Also is there a reason why it was changed to Linux (all) from Windows (all) - I'm resetting it to Windows(all) if it's also confirmed on Linux please set to just "all". Thanks
Comment 9 Giuseppe Castagno (aka beppec56) 2015-07-28 18:17:42 UTC
This same bug showed up in series of tests we did.

Our setup:
Windows 7
LibreOffice 4.4.4
Word 2010
WebDAV server is SharePoint 2013

The file is a UNC path opened directly through LibO file picker (Windows flavor non LibO one), the UNC path points to a SharePoint share.

Sequence of tests carried out:

1) open the UNC path with LibreOffice, opens all right, open the same UNC path with Word 2010:

LibO can work on the file, Word  tells you the file is opened by another user and offer you the usual choice: open read-only or edit a copy.
In this case LibO senses the file as read/write.

2) open the UNC path with Word 2010, and then the same UNC with LibO

LibO shows an error dialog with the text:

"The operation on \\rerpoint\sites\Test_OpenOffice\Documenti condivisi\Lorem_ipsum.doc was started with an invalid parameter"

In this case LibO senses the file as read/only instead, but fails to manage it.

This is the same issue we first discovered in Apache OpenOffice, where I worked out a patch to solve the issue.

As soon as possible I'll post a comment with a more detailed description of what happens under the hood, because this is not a WebDAV issue, but a local file system one instead.

If QA confirms this issue, then I'll take care of the issue and I'll propose through Gerrit a revised patch adapted to LibO.
Comment 10 Giuseppe Castagno (aka beppec56) 2015-07-29 07:57:55 UTC
This is what happens under the hood

On Windows 7 there is a service installed, the WebClient service (sometimes called MiniRedir), that carries out the interface work with WebDAV, the the acces to WebDAV is made through UNC.

In the case described by this issue LibO tries to access the UNC provided using the local filesystem.

Observing the Wireshark logs we registered, it appears that Windows tries to access the remote share first using Lanmanager protocols (SMB)
then by using the WebClient service.

The WebClient service checks the remote share to see if it lives on a Sharepoint server, in this case it takes care of the handshaking and perform
all that is needed to manage the resource on WebDAV, while presenting it to the requesting application, in this case LibO, as if it where a
local file system resource.
Comment 11 Giuseppe Castagno (aka beppec56) 2015-07-30 08:28:27 UTC
Took the issue, going push a patch to Gerrit.
Comment 12 Commit Notification 2015-07-30 14:08:53 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b7ae14655f8969069b882ae0bd43d79a4c92f357

tdf#60381: Accessing Sharepoint share using UNC path does not work.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Samuel Mehrbrodt 2015-07-30 14:11:11 UTC
Could someone verify the fix? It can then be backported to 5.0.
Comment 14 Giuseppe Castagno (aka beppec56) 2015-08-11 09:46:33 UTC
(In reply to Samuel Mehrbrodt from comment #13)
> Could someone verify the fix? It can then be backported to 5.0.

Samuel:
I verified it in the Aug, 10th master nightly build, on Windows 7 and Sharepoint 2013, and Word 2010.
This is a customer of mine setup.

It works all right, permitting interlocked operation Word <-> LO.

Could it be possible to backport it to libreoffice-5-0 ?
That would become 5.0.2, I think.

Thank you.
Comment 15 Samuel Mehrbrodt 2015-08-11 13:30:03 UTC
> Could it be possible to backport it to libreoffice-5-0 ?

Submitted the patch for it here: https://gerrit.libreoffice.org/#/c/17650/
Comment 16 Commit Notification 2015-08-15 18:55:37 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbb45cdac9934aed4d4f98452ecd5a2b0bb05781&h=libreoffice-5-0

tdf#60381: Accessing Sharepoint share using UNC path does not work.

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.