tdf#60381: Accessing Sharepoint share using UNC path does not work.

Added two Windows API missing errors.

The errors added:
ERROR_FILE_CHECKED_OUT
returned when trying to access a file that is locked
by another user.

ERROR_INVALID_NAME
returned when trying to access a local file with the wrong
chars in the path or file name.

Mapped to existent osl_File_E_.... for compatibility.

Change-Id: I0bea1ff2727729c569b0a2cb6befd0d38289b8a2
Reviewed-on: https://gerrit.libreoffice.org/17412
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
(cherry picked from commit b7ae14655f8969069b882ae0bd43d79a4c92f357)